# red-box

./: README.md  pyproject.toml  setup.py  versioneer.py
docs/: conf.py
redbox/: __init__.py  _version.py  box.py  testing.py
redbox/models/: __init__.py  attachment.py  mailbox.py  message.py
redbox/query/: __init__.py  query.py
redbox/tests/: conftest.py  test_fetch.py  test_query.py  test_search.py
redbox/utils/: inspector.py
