[tool.poetry]
name = "red-box"
version = "0.1.0"
description = ""
authors = ["asolana <asolana@deloitte.es>"]
readme = "README.md"
packages = [{include = "red_box"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pydantic = "^2.1.1"
black = "^23.7.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
